# inventory-sync-service

./: .env.example  .gitignore  .pre-commit-config.yaml  BATCH_PROCESSING_IMPLEMENTATION.md  Dockerfile  IMPLEMENTATION_CHECKLIST.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260708_0001_initial_inventory_schema.py  20260714_0002_add_processed_events_table.py  20260716_0003_add_failed_events_table.py  20260717_0004_add_reconciliation_table.py  20260723_0005_add_event_id_to_anomalies.py  20260724_0006_create_alerts_table.py
app/: __init__.py  main.py
app/api/: __init__.py
app/api/v1/: error_handlers.py  router.py
app/cache/: __init__.py  redis_batch_client.py  redis_client.py
app/config/: logging.py  settings.py
app/consumer/: __init__.py  batch_kafka_consumer.py  inventory_event_validator.py  kafka_consumer.py  sales_event_validator.py  sales_kafka_consumer.py  worker.py
app/database/: __init__.py  base.py  models.py  session.py
app/models/: __init__.py  batch.py  inventory.py  metrics.py
app/observability/: __init__.py  metrics.py
app/producer/: __init__.py  alert_kafka_producer.py  dlq_producer.py  kafka_producer.py  sales_kafka_producer.py
app/schemas/: __init__.py  alert.py  anomaly.py  common.py  health.py  inventory.py  metrics.py  reconciliation.py  sales.py
app/services/: __init__.py  alert_service.py  anomaly_detection_service.py  anomaly_service.py  batch_processing_service.py  exceptions.py  failed_event_service.py  health_service.py  inventory_event_service.py  inventory_service.py  processed_event_service.py  reconciliation_service.py  retry_service.py  sales_service.py
docs/: alerting_system.md  anomaly_detection.md  architecture.md  batch_processing.md
tests/: conftest.py  test_alert_service.py  test_alerts_endpoint.py  test_anomalies_endpoint.py  test_anomaly_detection_service.py  test_anomaly_service.py  test_batch_processing_service.py  test_database.py  test_dlq_producer.py  test_e2e_inventory_pipeline.py  test_failed_event_service.py  test_health.py  test_inventory_event_validator.py  test_inventory_events_endpoint.py  test_inventory_schema.py  test_inventory_service.py  test_kafka_consumer.py  test_kafka_producer.py  test_metrics_endpoint.py  test_processed_event_service.py  test_reconciliation_endpoint.py  test_reconciliation_service.py  test_redis_batch_client.py  test_resilience_observability.py  test_retry_service.py  test_sales_endpoint.py  test_sales_kafka_producer.py  test_sales_service.py
(+10 files in other folders)
